modified shell script for java docker and add docker support for agent program